--- a/Heart Disease Prediction/Heart_Disease_Prediction.ipynb
+++ b/Heart Disease Prediction/Heart_Disease_Prediction.ipynb
@@ -23,16 +23,16 @@
    "metadata": {},
    "source": [
     "## Project Roadmap\n",
-    "    - Here is the roadmap I have built to complete this project:\n",
-    "        * Import the data\n",
-    "        * Preprocess the data\n",
-    "        * calculate descriptive statistics  \n",
-    "        * Exploratory data analysis\n",
-    "        * Construct the Logistic Regression model\n",
-    "        * Evaluate the Logistic Regression model\n",
-    "        * Construct the Decision Tree model\n",
-    "        * Evaluate the Decision Tree model\n",
-    "        * Project key findings"
+    "Here is the roadmap I have built to complete this project:\n",
+    "* Import the data\n",
+    "* Preprocess the data\n",
+    "* calculate descriptive statistics  \n",
+    "* Exploratory data analysis\n",
+    "* Construct the Logistic Regression model\n",
+    "* Evaluate the Logistic Regression model\n",
+    "* Construct the Decision Tree model\n",
+    "* Evaluate the Decision Tree model\n",
+    "* Project key findings"
    ]
   },
   {
@@ -42,39 +42,39 @@
    "source": [
     "## About Dataset\n",
     "\n",
-    "    Age : Age of the patient\n",
-    "    \n",
-    "    Sex : Sex of the patient\n",
+    "Age : Age of the patient\n",
     "\n",
-    "    exang: exercise induced angina (1 = yes; 0 = no)\n",
+    "Sex : Sex of the patient\n",
     "\n",
-    "    ca: number of major vessels (0-3)\n",
+    "exang: exercise induced angina (1 = yes; 0 = no)\n",
     "\n",
-    "    cp : Chest Pain type chest pain type\n",
-    "    Value 1: typical angina\n",
-    "    Value 2: atypical angina\n",
-    "    Value 3: non-anginal pain\n",
-    "    Value 4: asymptomatic\n",
-    "    \n",
-    "    trtbps : resting blood pressure (in mm Hg)\n",
+    "ca: number of major vessels (0-3)\n",
     "\n",
-    "    chol : cholestoral in mg/dl fetched via BMI sensor\n",
+    "cp : Chest Pain type chest pain type\n",
+    "Value 1: typical angina\n",
+    "Value 2: atypical angina\n",
+    "Value 3: non-anginal pain\n",
+    "Value 4: asymptomatic\n",
     "\n",
-    "    fbs : (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
+    "trtbps : resting blood pressure (in mm Hg)\n",
     "\n",
-    "    rest_ecg : resting electrocardiographic results\n",
-    "    Value 0: normal\n",
-    "    Value 1: having ST-T wave abnormality (T wave inversions and/or ST \n",
-    "             elevation or depression of > 0.05 mV)\n",
-    "    Value 2: showing probable or definite left ventricular hypertrophy by \n",
-    "             Estes' criteria\n",
-    "    \n",
-    "    thalach : maximum heart rate achieved\n",
+    "chol : cholestoral in mg/dl fetched via BMI sensor\n",
     "\n",
-    "    target : 0= less chance of heart attack 1= more chance of heart attack\n",
-    "    \n",
+    "fbs : (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
     "\n",
-    "I have taken this dataset from Kaggle here is the link to the dataset:\n",
+    "rest_ecg : resting electrocardiographic results\n",
+    "Value 0: normal\n",
+    "Value 1: having ST-T wave abnormality (T wave inversions and/or ST \n",
+    "         elevation or depression of > 0.05 mV)\n",
+    "Value 2: showing probable or definite left ventricular hypertrophy by \n",
+    "         Estes' criteria\n",
+    "\n",
+    "thalach : maximum heart rate achieved\n",
+    "\n",
+    "target : 0= less chance of heart attack 1= more chance of heart attack\n",
+    "   \n",
+    "\n",
+    "`I have taken this dataset from Kaggle here is the link to the dataset:`\n",
     "\n",
     "\n",
     "\n",
@@ -644,7 +644,7 @@
    "id": "a9dcd5d2",
    "metadata": {},
    "source": [
-    "    - There are not any missing values in this dataset."
+    "There are not any missing values in this dataset."
    ]
   },
   {
@@ -707,7 +707,8 @@
    "id": "57dbb8d1",
    "metadata": {},
    "source": [
-    "    - The classes in this dataset are almost balanced.\n",
+    "`The classes in this dataset are almost balanced.`\n",
+    "\n",
     "In this dataset, `54.45%` of the patients have a higher risk of heart disease, while `45.54%` of the patients have a lower risk of heart disease."
    ]
   },
@@ -824,8 +825,10 @@
    "id": "8203de79",
    "metadata": {},
    "source": [
-    "    - Most of the patients in this dataset are aged between 47 and 61.\n",
-    "    - The distribution of ages in this dataset closely resembles a normal distribution."
+    "Most of the patients in this dataset are aged between 47 and 61.\n",
+    "\n",
+    "\n",
+    "The distribution of ages in this dataset closely resembles a normal distribution."
    ]
   },
   {
@@ -856,10 +859,10 @@
    "id": "9016f548",
    "metadata": {},
    "source": [
-    "    - The ages of female patients with a higher risk of heart disease are more \n",
-    "      spread out than those with a lower risk.\n",
-    "    - The ages of male patients with a higher risk of heart disease are slightly \n",
-    "      more spread out than those with a lower risk.\n"
+    "The ages of female patients with a higher risk of heart disease are more spread out than those with a lower risk.\n",
+    "\n",
+    "\n",
+    "The ages of male patients with a higher risk of heart disease are slightly more spread out than those with a lower risk.\n"
    ]
   },
   {
@@ -914,7 +917,7 @@
    "id": "10726a5a",
    "metadata": {},
    "source": [
-    "    - In this dataset, 68.3% of the patients are male, while only 31.6% are female."
+    "In this dataset, 68.3% of the patients are male, while only 31.6% are female."
    ]
   },
   {
@@ -1029,9 +1032,11 @@
    "id": "fd5546dc",
    "metadata": {},
    "source": [
-    "    - There are nearly twice as many male patients in this dataset as female patients.\n",
-    "    - There are more than twice as many female patients in this dataset who have a \n",
-    "      higher risk of heart disease.\n"
+    "There are nearly twice as many male patients in this dataset as female patients.\n",
+    "\n",
+    "\n",
+    "There are more than twice as many female patients in this dataset who have a \n",
+    "higher risk of heart disease.\n"
    ]
   },
   {
@@ -1217,11 +1222,13 @@
    "id": "7bcb57de",
    "metadata": {},
    "source": [
-    "    - 47.19% of the patients have chest pain type 0.\n",
-    "    - Among the approximately 147 patients with chest pain type 0, around 100 \n",
-    "      of them have a lower risk of heart disease.\n",
-    "    - The graph indicates that there are more patients with a lower risk of heart \n",
-    "      disease when chest pain types are 1, 2, and 3, except for chest pain type 0.\n"
+    "47.19% of the patients have chest pain type 0.\n",
+    "\n",
+    "\n",
+    "Among the approximately 147 patients with chest pain type 0, around 100 of them have a lower risk of heart disease.\n",
+    "\n",
+    "\n",
+    "The graph indicates that there are more patients with a lower risk of heart disease when chest pain types are 1, 2, and 3, except for chest pain type 0.\n"
    ]
   },
   {
@@ -1311,10 +1318,10 @@
    "id": "8c8809df",
    "metadata": {},
    "source": [
-    "    - There are outliers present in cases where patients have resting blood \n",
-    "      pressure greater than 140.\n",
-    "    - The distribution is slightly right-skewed, likely due to the presence \n",
-    "      of these outliers.\n"
+    "There are outliers present in cases where patients have resting blood pressure greater than 140.\n",
+    "\n",
+    "\n",
+    "The distribution is slightly right-skewed, likely due to the presence of these outliers.\n"
    ]
   },
   {
@@ -1345,8 +1352,7 @@
    "id": "4502b3eb",
    "metadata": {},
    "source": [
-    "    - Resting blood pressure is distributed fairly evenly among patients with a higher \n",
-    "      and lower risk of heart disease.\n"
+    "Resting blood pressure is distributed fairly evenly among patients with a higher and lower risk of heart disease.\n"
    ]
   },
   {
@@ -1436,8 +1442,9 @@
    "id": "de67de5b",
    "metadata": {},
    "source": [
-    "    - There is one extreme data point where cholesterol is greater than 500.\n",
-    "    - The distribution is slightly right-skewed due to the presence of a few outliers."
+    "There is one extreme data point where cholesterol is greater than 500. \n",
+    "\n",
+    "The distribution is slightly right-skewed due to the presence of a few outliers."
    ]
   },
   {
@@ -1470,8 +1477,7 @@
    "id": "5a543285",
    "metadata": {},
    "source": [
-    "    - Cholesterol levels are distributed fairly evenly among patients with both \n",
-    "      higher and lower risks of heart disease.\n"
+    "Cholesterol levels are distributed fairly evenly among patients with both higher and lower risks of heart disease.\n"
    ]
   },
   {
@@ -1635,11 +1641,10 @@
    "id": "56f35d40",
    "metadata": {},
    "source": [
-    "    - Approximately 85% of patients in this dataset have fasting blood sugar \n",
-    "      levels less than 120 mg/dL.\n",
-    "    - The number of patients with fasting blood sugar levels less than 120 mg/dL and a \n",
-    "      higher risk of heart disease is slightly greater than the number of patients with \n",
-    "      fasting blood sugar levels less than 120 mg/dL and a lower risk of heart disease.\n"
+    "Approximately 85% of patients in this dataset have fasting blood sugar levels less than 120 mg/dL.\n",
+    "\n",
+    "\n",
+    "The number of patients with fasting blood sugar levels less than 120 mg/dL and a higher risk of heart disease is slightly greater than the number of patients with fasting blood sugar levels less than 120 mg/dL and a lower risk of heart disease.\n"
    ]
   },
   {
@@ -1814,11 +1819,9 @@
    "id": "215e2d45",
    "metadata": {},
    "source": [
-    "    - Among the patients, 50.16% have `restecg=0`, followed by 48.51% with `restecg=1`, \n",
-    "      and only 1.32% with `restecg=2`.\n",
-    "    - The count of patients with `restecg=1` who have a higher risk of heart disease is \n",
-    "       greater than the count of patients with `restecg=1` and a lower risk of heart \n",
-    "       disease.\n",
+    "Among the patients, 50.16% have `restecg=0`, followed by 48.51% with `restecg=1`, and only 1.32% with `restecg=2`.\n",
+    " \n",
+    "The count of patients with `restecg=1` who have a higher risk of heart disease is greater than the count of patients with `restecg=1` and a lower risk of heart disease.\n",
     "\n"
    ]
   },
@@ -1909,9 +1912,10 @@
    "id": "91f005e2",
    "metadata": {},
    "source": [
-    "    - There is one outlier data point where the maximum heart rate achieved is less \n",
-    "      than 80.\n",
-    "    - The distribution is slightly left-skewed due to the presence of this one outlier.\n"
+    "There is one outlier data point where the maximum heart rate achieved is less than 80.\n",
+    "\n",
+    "\n",
+    "The distribution is slightly left-skewed due to the presence of this one outlier."
    ]
   },
   {
@@ -1944,8 +1948,7 @@
    "id": "995e977e",
    "metadata": {},
    "source": [
-    "    - Patients with a higher risk of heart disease have a higher mean value of maximum \n",
-    "      heart rate achieved than those with a lower risk.\n"
+    "Patients with a higher risk of heart disease have a higher mean value of maximum heart rate achieved than those with a lower risk.\n"
    ]
   },
   {
@@ -2113,11 +2116,10 @@
    "id": "fc630e11",
    "metadata": {},
    "source": [
-    "    - In this dataset, 67.32% of patients have `exng=0`, while only 32.67% have \n",
-    "      `exng=1`.\n",
-    "    - The count of patients with a higher risk of heart disease is greater when \n",
-    "      `exng=0`, while the count of patients with a lower risk of heart disease is \n",
-    "      greater when `exng=1`."
+    "In this dataset, 67.32% of patients have `exng=0`, while only 32.67% have \n",
+    "  `exng=1`.\n",
+    "  \n",
+    "The count of patients with a higher risk of heart disease is greater when `exng=0`, while the count of patients with a lower risk of heart disease is greater when `exng=1`."
    ]
   },
   {
@@ -2207,9 +2209,10 @@
    "id": "530bfbfc",
    "metadata": {},
    "source": [
-    "    - Most of the data points fall between 1 and 2, with a few exceptions \n",
-    "      where oldpeak is greater than 4.\n",
-    "    - The distribution is heavily right-skewed."
+    "Most of the data points fall between 1 and 2, with a few exceptions where oldpeak is greater than 4.\n",
+    "\n",
+    "\n",
+    "The distribution is heavily right-skewed."
    ]
   },
   {
@@ -2240,8 +2243,10 @@
    "id": "1a64a850",
    "metadata": {},
    "source": [
-    "    - Patients with a higher risk of heart disease have a mean oldpeak of around 0.3.\n",
-    "    - Patients with a lower risk of heart disease have a mean oldpeak of around 1.5."
+    "Patients with a higher risk of heart disease have a mean oldpeak of around 0.3.\n",
+    "\n",
+    "\n",
+    "Patients with a lower risk of heart disease have a mean oldpeak of around 1.5."
    ]
   },
   {
@@ -2417,11 +2422,10 @@
    "id": "a5dce872",
    "metadata": {},
    "source": [
-    "    - Among the patients, approximately 46.86% have `slp=2`, 46.20% have `slp=1`, \n",
-    "      and only 6.93% have `slp=0`.\n",
-    "    - Patients with a higher risk of heart disease are more prevalent when `slp=2`, \n",
-    "      while patients with a lower risk are more prevalent when `slp=1`.\n",
-    "\n"
+    "Among the patients, approximately 46.86% have `slp=2`, 46.20% have `slp=1`, and only 6.93% have `slp=0`.\n",
+    "\n",
+    "\n",
+    "Patients with a higher risk of heart disease are more prevalent when `slp=2`, while patients with a lower risk are more prevalent when `slp=1`."
    ]
   },
   {
@@ -2619,11 +2623,13 @@
    "id": "e63d79e9",
    "metadata": {},
    "source": [
-    "    - In this dataset, 57.75% of patients have `caa=0`.\n",
-    "    - Among patients with `caa=0`, those with a higher risk of heart disease \n",
-    "      are more than twice as many as those with a lower risk.\n",
-    "    - For patients with `caa` values of 1, 2, and 3, there are fewer with a \n",
-    "      higher risk of heart disease compared to those with a lower risk."
+    "In this dataset, 57.75% of patients have `caa=0`.\n",
+    "\n",
+    "\n",
+    "Among patients with `caa=0`, those with a higher risk of heart disease are more than twice as many as those with a lower risk.\n",
+    "\n",
+    "\n",
+    "For patients with `caa` values of 1, 2, and 3, there are fewer with a higher risk of heart disease compared to those with a lower risk."
    ]
   },
   {
@@ -2809,11 +2815,12 @@
    "id": "8f181aee",
    "metadata": {},
    "source": [
-    "    - In this dataset, 54.78% of patients have `thall=2`.\n",
-    "    - Among patients with `thall=2`, those with a higher risk of heart disease \n",
-    "      are more than twice as many as those with a lower risk.\n",
-    "    - For patients with `thall` values of 3 and 1, there are fewer with a higher \n",
-    "      risk of heart disease compared to those with a lower risk.\n"
+    "In this dataset, 54.78% of patients have `thall=2`.\n",
+    "\n",
+    "\n",
+    "Among patients with `thall=2`, those with a higher risk of heart disease are more than twice as many as those with a lower risk.\n",
+    "\n",
+    "For patients with `thall` values of 3 and 1, there are fewer with a higher risk of heart disease compared to those with a lower risk.\n"
    ]
   },
   {
